[gd_scene load_steps=45 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://samples/Stage1/Stage1_100_Hats.ogg" type="AudioStream" id=2]
[ext_resource path="res://addons/midi/MidiPlayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://arrow.tscn" type="PackedScene" id=4]
[ext_resource path="res://drum.tscn" type="PackedScene" id=5]
[ext_resource path="res://graphics/BgEightiesBabyT3.png" type="Texture" id=6]
[ext_resource path="res://samples/DrumClinks/DrumClink_0.ogg" type="AudioStream" id=7]
[ext_resource path="res://NoteExpirationTimer.tscn" type="PackedScene" id=8]
[ext_resource path="res://Themes/UITheme.tres" type="Theme" id=9]
[ext_resource path="res://CrtFx.tscn" type="PackedScene" id=10]
[ext_resource path="res://graphics/DrummerClothesBlackGilet.png" type="Texture" id=11]
[ext_resource path="res://graphics/HarmonistBodyAnroidT1.png" type="Texture" id=12]
[ext_resource path="res://graphics/HarmonistHairBrownPieces.png" type="Texture" id=13]
[ext_resource path="res://graphics/HarmonistLegsRobot.png" type="Texture" id=14]
[ext_resource path="res://graphics/HarmonistInstrumentRoboKeysT1.png" type="Texture" id=15]
[ext_resource path="res://prefabs/ToonParts.tscn" type="PackedScene" id=16]
[ext_resource path="res://graphics/HarmonistShadow.png" type="Texture" id=17]
[ext_resource path="res://graphics/HarmonistEyes01.png" type="Texture" id=23]
[ext_resource path="res://Musicians.gd" type="Script" id=24]
[ext_resource path="res://samples/Stage1/Stage1_100_Kick.ogg" type="AudioStream" id=25]
[ext_resource path="res://samples/Stage1/Stage1_100_Backing Track.ogg" type="AudioStream" id=26]
[ext_resource path="res://samples/Stage1/Stage1_100_Toms.ogg" type="AudioStream" id=27]
[ext_resource path="res://samples/Stage1/Stage1_100_Snare.ogg" type="AudioStream" id=28]
[ext_resource path="res://LvlMessage.tscn" type="PackedScene" id=29]
[ext_resource path="res://Heart.tscn" type="PackedScene" id=30]
[ext_resource path="res://Health.gd" type="Script" id=31]
[ext_resource path="res://BeginMsg.tscn" type="PackedScene" id=32]
[ext_resource path="res://graphics/KeyPress.png" type="Texture" id=33]
[ext_resource path="res://audio/applause.ogg" type="AudioStream" id=34]
[ext_resource path="res://FlyHeart.tscn" type="PackedScene" id=35]
[ext_resource path="res://GameOver.tscn" type="PackedScene" id=36]
[ext_resource path="res://Win.gd" type="Script" id=37]
[ext_resource path="res://audio/win.ogg" type="AudioStream" id=38]
[ext_resource path="res://graphics/Diamon.png" type="Texture" id=39]
[ext_resource path="res://ScoreTooltip.tscn" type="PackedScene" id=40]

[sub_resource type="Curve" id=9]
max_value = 5.0
_data = [ Vector2( 0, 0.842593 ), 0.0, 0.0, 0, 0, Vector2( 0.983828, 5 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=10]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="Animation" id=11]
resource_name = "Lev1"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("Label:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 0.5, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 5, 5 ), Vector2( 3, 3 ), Vector2( 5, 5 ), Vector2( 4, 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 1.1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "Lev2"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("Label:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 0.5, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 6, 6 ), Vector2( 4, 4 ), Vector2( 6, 6 ), Vector2( 5, 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 1.1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "Lev3"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("Label:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 0.5, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 7, 7 ), Vector2( 5, 5 ), Vector2( 7, 7 ), Vector2( 6, 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 1.1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "Lev4"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("Label:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 0.5, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 8, 8 ), Vector2( 6, 6 ), Vector2( 8, 8 ), Vector2( 7, 7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7, 0.9, 1.1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 0.796078, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 0, 1, 0.109804, 1 ), Color( 0.101961, 0, 1, 1 ), Color( 0.615686, 0, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "Lev5"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("Label:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 0.5, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 9, 9 ), Vector2( 7, 7 ), Vector2( 9, 9 ), Vector2( 8, 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7, 0.9, 1.1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 0, 0.352941, 1 ), Color( 0, 1, 0.835294, 1 ), Color( 1, 0.235294, 0, 1 ), Color( 0.662745, 1, 0, 1 ), Color( 0.615686, 0, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "flicker"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../OverMsg:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.5, 0.7, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.831373, 0, 0, 1 ), Color( 0, 0.694118, 1, 1 ), Color( 0.172549, 1, 0, 1 ), Color( 0.568627, 0, 1, 1 ), Color( 1, 0.960784, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "show"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.5, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.243137 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.6 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OverMsg:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( -2, -2, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -800 ), Vector2( 0, 100 ), Vector2( 0, -50 ), Vector2( 0, 0 ) ]
}

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="crt" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="UI" type="Control" parent="crt"]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Control" parent="crt/UI"]
margin_left = -14.0
margin_top = -33.0
margin_right = 26.0
margin_bottom = 7.0

[node name="Label" type="Label" parent="crt/UI/Score"]
margin_left = -334.0
margin_top = -293.0
margin_right = -284.0
margin_bottom = -243.0
rect_min_size = Vector2( 50, 50 )
rect_scale = Vector2( 4, 4 )
text = "Score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Points" type="Label" parent="crt/UI/Score"]
margin_left = -166.0
margin_top = -290.0
margin_right = -116.0
margin_bottom = -278.0
rect_min_size = Vector2( 50, 0 )
rect_scale = Vector2( 4, 4 )
text = "0"

[node name="Time" type="Control" parent="crt/UI"]
margin_left = -14.0
margin_top = -33.0
margin_right = 26.0
margin_bottom = 7.0

[node name="Label" type="Label" parent="crt/UI/Time"]
margin_left = -335.0
margin_top = -348.0
margin_right = -285.0
margin_bottom = -298.0
rect_min_size = Vector2( 50, 50 )
rect_scale = Vector2( 4, 4 )
text = "Time:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Points" type="Label" parent="crt/UI/Time"]
margin_left = -176.0
margin_top = -347.0
margin_right = -126.0
margin_bottom = -335.0
rect_min_size = Vector2( 50, 0 )
rect_scale = Vector2( 4, 4 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitMsg" type="Control" parent="crt/UI"]
margin_left = -10.0
margin_top = -43.0
margin_right = 30.0
margin_bottom = -3.0

[node name="Label" type="Label" parent="crt/UI/ExitMsg"]
margin_left = -32.0
margin_top = -342.0
margin_right = 68.0
margin_bottom = -276.0
rect_min_size = Vector2( 100, 50 )
rect_scale = Vector2( 4, 4 )
text = "SPACE to exit"
align = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Control" parent="crt/UI"]
margin_left = -10.0
margin_top = -43.0
margin_right = 30.0
margin_bottom = -3.0
script = ExtResource( 31 )

[node name="Label" type="Label" parent="crt/UI/Health"]
visible = false
margin_left = -32.0
margin_top = -342.0
margin_right = 68.0
margin_bottom = -276.0
rect_min_size = Vector2( 100, 50 )
rect_scale = Vector2( 4, 4 )
text = "SPACE to exit"
align = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="crt/UI/Health"]
margin_left = 28.0
margin_top = 4.0
margin_right = 300.0
margin_bottom = 52.0

[node name="h1" type="Control" parent="crt/UI/Health/HBox"]
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )

[node name="Heart" parent="crt/UI/Health/HBox/h1" instance=ExtResource( 30 )]
position = Vector2( 83, -256 )

[node name="h2" type="Control" parent="crt/UI/Health/HBox"]
margin_left = 56.0
margin_right = 104.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )

[node name="Heart" parent="crt/UI/Health/HBox/h2" instance=ExtResource( 30 )]
position = Vector2( 83, -256 )

[node name="h3" type="Control" parent="crt/UI/Health/HBox"]
margin_left = 112.0
margin_right = 160.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )

[node name="Heart" parent="crt/UI/Health/HBox/h3" instance=ExtResource( 30 )]
position = Vector2( 83, -256 )

[node name="h4" type="Control" parent="crt/UI/Health/HBox"]
margin_left = 168.0
margin_right = 216.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )

[node name="Heart" parent="crt/UI/Health/HBox/h4" instance=ExtResource( 30 )]
position = Vector2( 83, -256 )

[node name="h5" type="Control" parent="crt/UI/Health/HBox"]
margin_left = 224.0
margin_right = 272.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )

[node name="Heart" parent="crt/UI/Health/HBox/h5" instance=ExtResource( 30 )]
position = Vector2( 83, -256 )

[node name="HBox2" type="HBoxContainer" parent="crt/UI/Health"]
margin_left = 29.0
margin_top = 58.0
margin_right = 301.0
margin_bottom = 106.0

[node name="h1" type="Control" parent="crt/UI/Health/HBox2"]
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )

[node name="Heart" parent="crt/UI/Health/HBox2/h1" instance=ExtResource( 30 )]
position = Vector2( 83, -256 )

[node name="h2" type="Control" parent="crt/UI/Health/HBox2"]
margin_left = 56.0
margin_right = 104.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )

[node name="Heart" parent="crt/UI/Health/HBox2/h2" instance=ExtResource( 30 )]
position = Vector2( 83, -256 )

[node name="h3" type="Control" parent="crt/UI/Health/HBox2"]
margin_left = 112.0
margin_right = 160.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )

[node name="Heart" parent="crt/UI/Health/HBox2/h3" instance=ExtResource( 30 )]
position = Vector2( 83, -256 )

[node name="h4" type="Control" parent="crt/UI/Health/HBox2"]
margin_left = 168.0
margin_right = 216.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )

[node name="Heart" parent="crt/UI/Health/HBox2/h4" instance=ExtResource( 30 )]
position = Vector2( 83, -256 )

[node name="h5" type="Control" parent="crt/UI/Health/HBox2"]
margin_left = 224.0
margin_right = 272.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )

[node name="Heart" parent="crt/UI/Health/HBox2/h5" instance=ExtResource( 30 )]
position = Vector2( 83, -256 )

[node name="Message" type="Control" parent="crt/UI"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CrtFx" parent="crt" instance=ExtResource( 10 )]

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
margin_left = -506.288
margin_top = -524.673
margin_right = 493.712
margin_bottom = 475.327
color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 26 )

[node name="midi1" parent="." instance=ExtResource( 3 )]
file = "res://samples/Stage1/Stage1.mid"

[node name="midi2" parent="." instance=ExtResource( 3 )]
file = "res://samples/Stage1/Stage1.mid"

[node name="Bg" type="Node2D" parent="."]
position = Vector2( -37.7667, 182.846 )
scale = Vector2( 2, 2 )

[node name="Sprite" type="Sprite" parent="Bg"]
position = Vector2( 15.8834, -101.423 )
scale = Vector2( 3.2, 3.2 )
texture = ExtResource( 6 )

[node name="Musicians" type="Node2D" parent="."]
position = Vector2( -79, 6 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 24 )

[node name="Bassist" parent="Musicians" instance=ExtResource( 16 )]

[node name="Harmonist" type="Node2D" parent="Musicians"]
position = Vector2( 256, -500 )
scale = Vector2( 10, 10 )

[node name="Legs" type="Sprite" parent="Musicians/Harmonist"]
texture = ExtResource( 14 )

[node name="Body" type="Sprite" parent="Musicians/Harmonist"]
texture = ExtResource( 12 )

[node name="Clothes" type="Sprite" parent="Musicians/Harmonist"]
visible = false
texture = ExtResource( 11 )

[node name="Eyes" type="Sprite" parent="Musicians/Harmonist"]
texture = ExtResource( 23 )

[node name="Hair" type="Sprite" parent="Musicians/Harmonist"]
texture = ExtResource( 13 )

[node name="Instrument" type="Sprite" parent="Musicians/Harmonist"]
texture = ExtResource( 15 )

[node name="Shadow" type="Sprite" parent="Musicians/Harmonist"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 1, 1, 1, 0.333333 )
texture = ExtResource( 17 )

[node name="BandAnim" type="Timer" parent="Musicians"]
wait_time = 0.3
one_shot = true
autostart = true

[node name="EyesAnim" type="Timer" parent="Musicians"]
wait_time = 0.1
one_shot = true
autostart = true

[node name="drum" parent="." instance=ExtResource( 5 )]
position = Vector2( -79, 6 )
scale = Vector2( 0.5, 0.5 )

[node name="Msg" type="Node2D" parent="."]

[node name="Cont" type="Node2D" parent="Msg"]
position = Vector2( -6, -484 )

[node name="MiniParticles" type="CPUParticles2D" parent="Msg/Cont"]
position = Vector2( 6, 310 )
scale = Vector2( 4, 4 )
emitting = false
amount = 64
lifetime = 0.8
one_shot = true
emission_shape = 2
emission_rect_extents = Vector2( 10, 1 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 30.0
scale_amount_curve = SubResource( 9 )
color_ramp = SubResource( 10 )

[node name="MegaParticles" type="CPUParticles2D" parent="Msg/Cont"]
position = Vector2( 6, 310 )
scale = Vector2( 4, 4 )
emitting = false
amount = 128
lifetime = 0.8
one_shot = true
emission_shape = 2
emission_rect_extents = Vector2( 10, 1 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 40.0
scale_amount_curve = SubResource( 9 )
color_ramp = SubResource( 10 )

[node name="Label" type="Label" parent="Msg/Cont"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -56.0
margin_top = 199.0
margin_right = 24.0
margin_bottom = 249.0
rect_min_size = Vector2( 80, 50 )
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 40, 7 )
theme = ExtResource( 9 )
text = "MSG efefefeae
"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BecomeBig" type="AnimationPlayer" parent="Msg/Cont"]
playback_speed = 1.3
anims/Lev1 = SubResource( 11 )
anims/Lev2 = SubResource( 12 )
anims/Lev3 = SubResource( 13 )
anims/Lev4 = SubResource( 14 )
anims/Lev5 = SubResource( 15 )

[node name="buttons" type="Node2D" parent="."]
position = Vector2( -73.7667, 142.846 )
scale = Vector2( 0.4, 0.4 )

[node name="left" parent="buttons" instance=ExtResource( 4 )]
position = Vector2( -375.583, 287.885 )
color = Color( 0.521569, 0.14902, 0.890196, 1 )

[node name="letter" type="Label" parent="buttons/left"]
margin_left = -17.0
margin_top = -9.00012
margin_right = 23.0
margin_bottom = 4.99988
rect_rotation = 90.0
rect_scale = Vector2( 1.5, 1.5 )
theme = ExtResource( 9 )
text = "A"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="letterFrame" type="Sprite" parent="buttons/left/letter"]
position = Vector2( 3.33332, 7.00002 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 33 )

[node name="up" parent="buttons" instance=ExtResource( 4 )]
position = Vector2( -15.5833, 307.885 )
rotation = 0.0
color = Color( 0, 0.647059, 1, 1 )

[node name="letter2" type="Label" parent="buttons/up"]
margin_left = -3.99999
margin_top = 12.5
margin_right = 36.0
margin_bottom = 26.5
rect_scale = Vector2( 1.5, 1.5 )
theme = ExtResource( 9 )
text = "S"

[node name="letterFrame2" type="Sprite" parent="buttons/up/letter2"]
position = Vector2( 2.66666, 7.33334 )
rotation = -3.57628e-06
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 33 )

[node name="down" parent="buttons" instance=ExtResource( 4 )]
position = Vector2( 374.417, 277.885 )
rotation = -3.14159
color = Color( 0, 1, 0.392157, 1 )

[node name="letter3" type="Label" parent="buttons/down"]
margin_left = 5.0
margin_top = -19.5
margin_right = 45.0
margin_bottom = -5.50003
rect_rotation = 180.0
rect_scale = Vector2( 1.5, 1.5 )
theme = ExtResource( 9 )
text = "K"

[node name="letterFrame3" type="Sprite" parent="buttons/down/letter3"]
position = Vector2( 3.33334, 6.99998 )
rotation = -6.19888e-06
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 33 )

[node name="right" parent="buttons" instance=ExtResource( 4 )]
position = Vector2( 756.917, 285.385 )
rotation = 1.5708
color = Color( 0.890196, 0.14902, 0.14902, 1 )

[node name="letter4" type="Label" parent="buttons/right"]
margin_left = 17.0
margin_top = -0.5
margin_right = 57.0
margin_bottom = 13.5
rect_rotation = -90.0
rect_scale = Vector2( 1.5, 1.5 )
theme = ExtResource( 9 )
text = "L"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="letterFrame4" type="Sprite" parent="buttons/right/letter4"]
position = Vector2( 2.66669, 6.99999 )
rotation = -7.15256e-06
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 33 )

[node name="Notifications" type="Node2D" parent="."]

[node name="FlyHeart" parent="Notifications" instance=ExtResource( 35 )]

[node name="HitNotifications" type="Node" parent="Notifications"]

[node name="BeginMsg" parent="Notifications" instance=ExtResource( 32 )]
margin_left = -230.0
margin_top = -289.0
margin_right = 794.0
margin_bottom = 311.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="ScoreTooltip" parent="Notifications" instance=ExtResource( 40 )]
modulate = Color( 0.501961, 1, 0.501961, 1 )
margin_left = -86.0
margin_top = -255.0
margin_right = 938.0
margin_bottom = 345.0

[node name="LvlMessage" parent="Notifications" instance=ExtResource( 29 )]
visible = false
margin_left = -400.0
margin_top = -400.0
margin_right = 624.0
margin_bottom = 200.0
rect_scale = Vector2( 0.75, 0.75 )

[node name="Timers" type="Node" parent="."]

[node name="Exp2" parent="Timers" instance=ExtResource( 8 )]
note_nr = 2

[node name="Exp1" parent="Timers" instance=ExtResource( 8 )]

[node name="Exp3" parent="Timers" instance=ExtResource( 8 )]
note_nr = 3

[node name="Exp4" parent="Timers" instance=ExtResource( 8 )]
note_nr = 4

[node name="PlayTimer" type="Timer" parent="Timers"]
autostart = true

[node name="CountdownTimer" type="Timer" parent="Timers"]
wait_time = 0.4
one_shot = true
autostart = true

[node name="Sample1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 25 )

[node name="Sample2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 28 )

[node name="Sample3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Sample4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 27 )

[node name="applause" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 34 )
volume_db = -15.0
pitch_scale = 1.5

[node name="Wrong" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="GameOver" parent="." instance=ExtResource( 36 )]

[node name="Win" type="Control" parent="."]
pause_mode = 2
visible = false
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 9 )
script = ExtResource( 37 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="applause2" type="AudioStreamPlayer" parent="Win"]
stream = ExtResource( 34 )
volume_db = -10.0

[node name="ColorRect" type="ColorRect" parent="Win"]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 1, 1, 0.654902 )
margin_left = -589.0
margin_top = -516.0
margin_right = 1411.0
margin_bottom = 1484.0
color = Color( 0.780392, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Confetti" type="CPUParticles2D" parent="Win"]
position = Vector2( -1, -455 )
scale = Vector2( 4, 4 )
emitting = false
amount = 64
lifetime = 2.0
texture = ExtResource( 39 )
emission_shape = 2
emission_rect_extents = Vector2( 100, 1 )
angular_velocity = 40.0
angular_velocity_random = 1.0
linear_accel = 120.0
linear_accel_random = 1.0

[node name="WinSound" type="AudioStreamPlayer" parent="Win"]
stream = ExtResource( 38 )
volume_db = -5.0
pitch_scale = 1.1

[node name="pressSpace" type="Label" parent="Win"]
modulate = Color( 1, 1, 1, 0.472958 )
margin_left = -208.0
margin_top = 85.0
margin_right = -136.0
margin_bottom = 99.0
rect_scale = Vector2( 6, 6 )
text = "press space"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="flicker" type="AnimationPlayer" parent="Win/pressSpace"]
anims/flicker = SubResource( 16 )

[node name="OverMsg" type="Control" parent="Win"]
modulate = Color( 0.264048, 0.473662, 0.682395, 1 )
margin_top = -800.0
margin_right = 40.0
margin_bottom = -760.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Win/OverMsg"]
margin_left = -299.0
margin_top = -51.0
margin_right = -221.0
margin_bottom = -37.0
rect_scale = Vector2( 8, 8 )
text = "YOU MADE IT!!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Anim" type="AnimationPlayer" parent="Win"]
anims/show = SubResource( 17 )

[node name="camera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.95, 0.95 )

[connection signal="finished" from="music" to="." method="_on_music_finished"]
[connection signal="midi_event" from="midi1" to="." method="_on_midi_event"]
[connection signal="midi_event" from="midi2" to="." method="_on_midi2_event"]
[connection signal="timeout" from="Musicians/BandAnim" to="Musicians" method="_on_BandAnim_timeout"]
[connection signal="timeout" from="Musicians/EyesAnim" to="Musicians" method="_on_EyesAnim_timeout"]
[connection signal="timeout" from="Timers/PlayTimer" to="." method="_on_PlayTimer_timeout"]
[connection signal="timeout" from="Timers/CountdownTimer" to="." method="_on_CountdownTimer_timeout"]
